<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wavies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Up Coming</string>
    <string name="top_rated_movies">Top Rated</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="bullet">•</string>
    <string name="now_playing">Now Playing</string>
    <string name="title_search" tools:keep="@string/title_search">Search</string>
    <string name="title_favorite" tools:keep="@string/title_favorite">Favorite</string>
</resources>